# PhysiCOOL

./: .gitignore  .gitpod.yml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  Untitled.ipynb  motility_msweep.ipynb  ode-toy-model.ipynb  psweep_example.ipynb  pyproject.toml  requirements.txt  tutorial.md
.github/workflows/: ci-cd.yml  python-package.yml
docs/: Makefile  black_box.md  conf.py  example.ipynb  external_libs.md  getting_started.md  index.md  make.bat  multi-level.ipynb  multi_lelvel.md  multi_level.md  ode-toy-model.ipynb  requirements.txt  view.ipynb  xml_update.ipynb
docs/img/: black_box
documentation/: python-physicell-tutorial.md
examples/: README.md  interactive-toy-model.ipynb  ode-toy-model.ipynb  output-viz.ipynb
examples/growth/: PhysiCOOL_growth_example.ipynb  physicool.py  project
examples/growth/config/: PhysiCell_settings-backup.xml  PhysiCell_settings.xml  PhysiCell_settings_2s.xml  Toy_Metabolic_Model.cps  Toy_Metabolic_Model.xml  blah.xml  cells.csv  plotMicroenv.m  plot_intracellular.m
examples/motility/: README.md  black_box.ipynb  motility.ipynb  project  sweeper.ipynb
examples/motility/config/: PhysiCell_settings.xml  cells.csv
examples/motility/custom_modules/: custom.cpp  custom.h
examples/motility/new/: ALL_CITATIONS.txt  black_box.ipynb  create_pos_csv.py  model.ipynb  plot_results.py  run_model.py
src/physicool/: __init__.py  config.py  datatypes.py  optimization.py  pcxml.py  physicool.py  plotting.py  processing.py  updaters.py  visualization.py
tests/: configdata.py  test_black_box.py  test_config.py  test_physicool.py  test_processing.py  test_updaters.py  test_xml.py
tests/PhysiCell/config/: PhysiCell_settings.xml  settings_read_only.xml
tests/PhysiCell/output/: final.xml  (+52 more)
tests/config/: PhysiCell_settings.xml
tests/data/: initial_positions.csv  output00000000_cells_physicell.mat  output00000001_cells_physicell.mat  settings.xml  settings_read_only.xml
tests/output/: output00000000.xml  output00000000_cells.mat  output00000000_cells_physicell.mat  output00000000_microenvironment0.mat
voila/render/: cloud.ipynb
(+30 files in other folders)
