[tool.poetry]
name = "physicool"
version = "0.1.0a1"
description = "A generalized, model-agnostic framework for model calibration in PhysiCell."
authors = ["Inês Gonçalves, David Hormuth, Caleb Phillips, Sandhya Prabhakaran"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
myst-nb = "^0.13.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
