[tool.poetry]
name = "physicool"
version = "0.1.0a1"
description = "A generalized, model-agnostic framework for model calibration in PhysiCell."
authors = ["Inês Gonçalves, David Hormuth, Caleb Phillips, Sandhya Prabhakaran"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.22.2"
scipy = "^1.8.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = "^0.13.2"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pyvista = "^0.33.2"
ipyvtk-simple = "^0.1.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
